# tiendapago-examen-EA

./: .gitignore  LICENSE  README.md  pyproject.toml
code/: .~lock.daily_customer_sales.xlsx#  Customers.csv  Distributor.csv  TechnicalCaseBI.docx  Test Intermedio Practico de Excel.xlsx  Transactions.csv  daily_customer_sales.xlsx  higher_sum_transactions_per_day.xlsx  pipeline_results.csv  pipeline_results.xlsx  primer_ejercicio.ipynb  segundo ejercicio.txt  tercer_ejercicio.ipynb  totals_per_client.xlsx  two_metrics.xlsx
